April 19 2002 Timo Kiviluoto <sonor@phpoint.fi>

	* Everything changed.

2002-04-18  Heikki Sairanen  <heikki.sairanen@phpoint.net>

	* Main/Include/itemde.h: Price of Avatar of Valpuri added. Also added boot, gauntlet, belt, ring and amulet 
	* Main/Source/itemde.cpp: Added some generic functions for the added items
	* Main/Source/lsquare.cpp: Added tame symbol

2002-04-06 Heikki Sairanen <heikki.sairanen@phpoint.net>

 	* Main/Include/itemde.h: Added cloak and shield	(actually did this a week ago, but didn't commit)

April 13 2002 Timo Kiviluoto <sonor@phpoint.fi>

	* Symbol.pcx: battle, tame, peaceful and hostile symbols added by Kahvi

April 6 2002 Timo Kiviluoto <sonor@phpoint.fi>

	* Item.pcx: boot added and an error in cloak fixed by Kahvi
	* Humanoid.pcx: mistress hair shortened by Kahvi

2002-04-06 Heikki Sairanen  <heikki.sairanen@phpoint.net>

	* Main/Source/itemde.cpp (pickaxe::Apply): Added new formula for calulation the length of digging
	* FELL/Include/hscore.h: Add changed to return bool telling whether the score got to the list or not
	* FELL/Source/hscore.cpp: Add changed to return bool telling whether the score got to the list or not. And if the player doesen't get to the list the result is not drawn in function Draw
	* Main/Include/charba.h: Added #defines for hungerlevels and hunger states and added GetHungerState function
	* Main/Source/charba.cpp: Added GetHungerState function and changed every reference to the old (bad) hunger level systems to use it.
	* Main/Include/materde.h: deleted all CanBeDigged functions
	* Main/Include/materba.h: 
	* Main/Source/materba.cpp: CanBeDigged now examines the StrengthValues of the materials.
	* Main/Source/game.cpp: DrawPanel now draws Satiated and Bloated hunger states also and all hungerstate are calculated by character's GetHungerState function


April 6 2002 Timo Kiviluoto <sonor@phpoint.fi>

	* Item.pcx: shield, cloak, gauntlet, belt, amulet and ring added by Kahvi
