@@ -1,5 +1,9 @@
 April 19 2002 Timo Kiviluoto <sonor@phpoint.fi>
 
+	* stack.cpp: Inventory works again
+
+April 19 2002 Timo Kiviluoto <sonor@phpoint.fi>
+
 	* Everything changed.
 
 2002-04-18  Heikki Sairanen  <heikki.sairanen@phpoint.net>
